--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@types/node": "18.11.10",
@@ -19,10 +21,17 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.3",
+    "simplify-js": "^1.2.4",
+    "simplify-path": "^1.1.0",
     "zustand": "^4.1.4"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/react": "^18.0.26",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "typescript": "^4.9.4"
   }
 }
