--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.7.1",
     "simplify-js": "^1.2.4",
     "simplify-path": "^1.1.0",
+    "svg-path-properties": "^1.1.0",
     "zustand": "^4.1.4"
   },
   "devDependencies": {
